tests/baselines/reference/promiseEmptyTupleNoException.errors.txt
tests/cases/compiler/promiseEmptyTupleNoException.ts(1,38): error TS1122: A tuple type element list cannot be empty.
tests/cases/compiler/promiseEmptyTupleNoException.ts(3,3): error TS2322: Type '任意[]' is not assignable to type '[]'.
  Types of property 'pop' are incompatible.
    Type '() => 任意' is not assignable to type '() => 不及'.
      Type '任意' is not assignable to type '不及'.


==== tests/cases/compiler/promiseEmptyTupleNoException.ts (2 errors) ====
    export async function get(): Promise<[]> {
                                         ~~
!!! error TS1122: A tuple type element list cannot be empty.
      let emails = [];
      return emails;
      ~~~~~~~~~~~~~~
!!! error TS2322: Type '任意[]' is not assignable to type '[]'.
!!! error TS2322:   Types of property 'pop' are incompatible.
!!! error TS2322:     Type '() => 任意' is not assignable to type '() => 不及'.
!!! error TS2322:       Type '任意' is not assignable to type '不及'.
    }
    